# genbank_data_retrieval

./: README.md  print_requirements.sh  pyproject.toml  requirements  requirements.txt
UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
genbank_data_code/: NM_000093.4_Genbank.txt  main.py
genbank_data_code/modules/: dictionary_to_object.py  entrez_efetch.py  genbank.py  genbank_as_file.py  group_lines.py  make_file.py  modular_code.py  print_attribute.py  split_blocks.py
genbank_data_code/utils/: logger.py
tests/: test_split_blocks.py
